--- a/index.qmd
+++ b/index.qmd
@@ -126,7 +126,7 @@ The very first step towards developing educational resources consists in creatin
 * {{< fa brands r-project >}}: [template](https://github.com/InseeFrLab/AIML4OS-template-quarto-r)
 * {{< fa brands python >}} `Python`: [template](https://github.com/InseeFrLab/AIML4OS-template-quarto-python).
 
-These templates contain all what you need to produce resources that can be easily made available as websites or as  training material on the SSP Cloud. More precisely, these templates contain:
+These templates contain all what you need to produce resources that can be easily made available as websites or as interactive environments on the SSP Cloud. More precisely, these templates contain:
 
 - a minimal Quarto website with graphical elements reflecting AIML4OS aesthetic;
 - a minimal example of a Quarto document producing a Jupyter Notebook ({{< fa brands python >}} `Python` only);
@@ -224,7 +224,7 @@ Once a configuration is defined, using it is very easy and very fast:
 
 ## Step 3: develop resources
 
-If you have created a repository from a template and defined a development configuration, developing resources basically amounts to modifying the minimal examples available in your repositoryy.
+If you have created a repository from a template and defined a development configuration, developing resources basically means to modifying the minimal examples available in your repository.
 
 ### Developing a website
 
@@ -253,11 +253,13 @@ A compléter sur Quarto/R et Notebooks Python.
 
 A compléter sur Quarto/R
 
+The function `install.packages()` must not be used anywhere in the documents (see below for recommendations on dependency management).
+
 #### Python
 
 A compléter sur Notebooks Python.
 
-It makes more sense to provide your learners with a jupyter notebook. To generate it, you can write
+It makes more sense to provide your learners with a Jupyter notebook. To generate it, you can write
 
 ```{.bash}
 quarto render --to ipynb
