--- a/index.qmd
+++ b/index.qmd
@@ -166,9 +166,23 @@ Here is what to do to re-use a template:
 
 SSPCloud is not only useful to disseminate educational resources; it is also the right place to develop them. Doing so will facilitate resource dissemination as the environment used for training will be equivalent to the one used for development. In other words, we strongly recommend that you develop on the SSPCloud because this will help a lot to make your educational resources reproducible.
 
-### How to define a configuration
+### What is a configuration and why is it useful?
 
-The best way to develop resources on the SSP Cloud is to define your own development configuration. If you define a configuration, you can come back to the SSP Cloud any time and resume developing your resources in only one click. Defining a configuration may seem complicated the first time you do it, but you will get used to it in no time.
+The best way to develop resources on the SSP Cloud is to define your own development configuration. In technical terms, a configuration is just a service available on the SSP Cloud (eg: RStudio or VSCode) with additional user-defined settings such as: the Github repository you want to work on, your Github credentials, the size of memory and number of CPU you want to use, the initialization script you want to run... Defining a configuration has two advantage:
+
+- it lets you define the technical environment you want to use for a specific project;
+- you can resume working on your project at any time in only one click, and be sure that the technical environment remains exactly the same.
+
+Your configurations are listed on the right side of the "My services" tab. To use a configuration, you just have to click on Launch (red rectangle). You can modify or delete an existing configuration by clicking on the contextual menu (green rectangle).
+
+![](pics/SSPCloud4.png){width=350}
+
+
+::: {.callout-warning collapse="false"}
+Defining a configuration may seem complicated the first time you do it, but you will get used to it in no time.
+:::
+
+### How to define a configuration
 
 Here is how to define a development configuration the SSP-Cloud.
 
