--- a/index.qmd
+++ b/index.qmd
@@ -245,7 +245,7 @@ Once a configuration is defined, using it is very easy and very fast:
 
 If you have created a repository from a template and defined a development configuration, developing resources basically means modifying and extending the minimal examples available in your repository.
 
-### Developing a website
+### Developing and previewing a website
 
 You can develop you website by writing text and code chunks in the existing `qmd` files (`index.qmd` and `chapter1.qmd`). You can also extend the structure of the website by adding new Quarto documents (in the `chapters` subdirectory). These new documents must then be added to the website by modifying the `_quarto.yml` file in two places: in the `render` argument, and in the `contents` of the `sidebar` argument.
 
